Fixed overflow issue

--- a/static/css/global.css
+++ b/static/css/global.css
@@ -1,6 +1,5 @@
 body {
     user-select: none;
-    overflow: hidden;
 }
 
 .ui.modal {
